# itsolution-test

./: .gitignore  README.md  dockerfile  manage.py  pyproject.toml
quotes/: asgi.py  settings.py  urls.py  wsgi.py
quotes/templates/registration/: logged_out.html  login.html  profile.html  register.html
quotesapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotesapp/migrations/: 0001_initial.py  0002_alter_vote_user_alter_quote_creator_delete_user.py  0003_alter_quote_text_alter_source_name_favourites.py
quotesapp/static/css/: styles.css
quotesapp/static/js/: scripts.js
quotesapp/templates/: add_quote.html  base_generic.html  index.html  most_popular.html
staticfiles/css/: styles.css
staticfiles/js/: scripts.js
